--- a/package.json
+++ b/package.json
@@ -67,5 +67,13 @@
       "**/hardhat-ts/**"
     ]
   },
-  "dependencies": {}
+  "dependencies": {
+    "@chrisoakman/chessboardjs": "^1.0.0",
+    "@web3-react/injected-connector": "^6.0.7",
+    "chess.js": "^0.12.0",
+    "chessboardjsx": "^2.4.7",
+    "eth-hooks": "^3.4.0",
+    "ethers": "^5.5.2",
+    "react-compound-timer": "^1.2.0"
+  }
 }
